--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "prop-types": "^15.8.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-geolocated": "^4.0.3",
     "react-spotify-embed": "^1.0.4",
+    "suncalc": "^1.9.0",
     "three": "^0.146.0"
   }
 }
